tests/instantiating/invalid/conflicting_order_of_groups/bus.fbd
main bus
	my_block block
		foo status
			groups = ["a", "b", "c"]

		bar status
			groups = ["c", "b", "a"]
